# str-agentic-adventures

./: .dockerignore  .gitignore  .mcp.json  .playwright-mcp.config.json  AGENTS.md  CLAUDE.md  CONTAINER_OPTIMIZATION.md  Dockerfile  E2E_TEST_SUMMARY.md  ISSUE_RESOLUTION_SUMMARY.md  MIGRATION_COMPLETE.md  Makefile  OPENAPI_CLIENT.md  README.md  SRD_COMPLIANCE_SUMMARY.md  TESTING_STRATEGY.md  UV_MIGRATION.md  app.db  azure.yaml  comment_classification_report.py  copilot-setup-steps.yml  flatten.xml  for grouping  pyproject.toml  quick_srd_check.py  requirements.txt  srd_compliance_checker.py
.azure/: config.env
.bmad-core/: install-manifest.yaml
.claude/: config.json  settings.json  settings.local.json
.githooks/: pre-commit
.github/: copilot-instructions.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  app.db  demo_streaming_chat.py  narrative_integration_demo.py  narrative_system_demo.py  pyproject.toml  requirements.txt  start.sh  test_agent_integration.py  test_api.py  test_battle_map.py  test_campaign_functionality.py  test_combat_action_processing.py  test_combat_fallback.py  test_dnd5e_rules.py  test_fallback_simple.py  test_image_generation.py  test_image_generation_e2e.py  test_inventory_system.py  test_inventory_unit.py  test_issue_283_fix.py  test_narrative_generation.py  test_progression.py  test_progression_core.py  test_rest_api.http  test_rules_engine.py  test_spell_save_dc_api.py  test_spell_slot_integration.py  test_spell_slots.py  test_streaming_chat.py  test_visual_generation.py  test_visual_implementation.py  test_websocket_client.py  test_websocket_connection.http
backend/app/: __init__.py  agent_client_setup.py  agent_framework_base.py  auth.py  auto_save.py  azure_openai_client.py  config.py  database.py  encounter_balancer.py  image_budget.py  kernel_setup.py  main.py  migration_runner.py  rules_engine.py  srd_data.py
backend/app/agents/: artist_agent.py  base_agent.py  combat_cartographer_agent.py  combat_mc_agent.py  dungeon_master_agent.py  narrator_agent.py  orchestration.py  scribe_agent.py
backend/app/api/: game_routes.py  npc_routes.py  session_routes.py  websocket_routes.py
backend/app/api/routes/: __init__.py  _shared.py  ai_routes.py  campaign_routes.py  character_routes.py  combat_routes.py  dice_routes.py  inventory_routes.py  item_routes.py  map_routes.py  npc_routes.py  realtime.py  rest_routes.py  save_routes.py  session_routes.py  spell_routes.py
backend/app/core/: __init__.py  agent_communication.py  base_agent.py  orchestration.py  service_manager.py  task_allocation.py
backend/app/data/: __init__.py  armor.json  backgrounds.json  class_features.json  monsters.json  racial_traits.json  spells.json  spells_data.py  weapons.json
backend/app/middleware/: prompt_shield_middleware.py
backend/app/models/: communication_models.py  db_models.py  game_models.py  map_models.py
backend/app/persistence/: __init__.py  file_storage.py  interface.py  persistent_agent.py  session_manager.py
backend/app/plugins/: __init__.py  art_style_analysis_plugin.py  battle_positioning_plugin.py  character_visualization_plugin.py  dnd5e_data.py  environmental_hazards_plugin.py  image_generation_plugin.py  map_generation_plugin.py  narrative_generation_plugin.py  narrative_memory_plugin.py  npc_management_plugin.py  rules_engine_plugin.py  scene_composition_plugin.py  tactical_analysis_plugin.py  terrain_assessment_plugin.py  visual_consistency_plugin.py
backend/app/routers/: __init__.py  campaign.py  characters.py  combat.py  dice.py  images.py  items.py  npc.py  spells.py
backend/app/services/: __init__.py  blob_storage_service.py  campaign_service.py  game_context_service.py  game_state_service.py  image_generation_service.py  npc_dialogue_service.py  npc_integration_service.py  prompt_shield_service.py  session_manager.py  tile_grid_generator.py
backend/app/storage/: __init__.py  interfaces.py  semantic_storage.py
backend/app/utils/: __init__.py  dice.py  spells.py
backend/data/collections/scribe/: character_character_1.json  character_character_2.json
backend/data/sessions/: 0306408d-7a43-4647-ab52-a74d103917bd.json  62e3d4f4-2092-49c1-ac42-22030a845641.json  d4606b48-df95-47df-a5fc-c81d489ecd94.json
backend/docs/: npc_management_system.md
backend/migrations/: env.py
backend/migrations/versions/: 50b401563356_add_save_slots_table.py  640db23039c0_add_npc_tables.py  9a6d5baf6502_initial_database_schema.py  a1b2c3d4e5f6_add_conversation_threads.py  b2c3d4e5f6a7_add_game_sessions_and_participants.py  c3d4e5f6a7b8_add_combat_states_table.py  c3d4e5f6a7b8_add_unique_constraint_save_slots.py
backend/test_data/collections/characters/: test_char.json
backend/test_data/sessions/: test_session.json
backend/tests/: MIGRATION_GUIDE_dependency_injection.md  README.md  __init__.py  conftest.py  factories.py  test_adr_compliance.py  test_agent_integration.py  test_agent_orchestration.py  test_agent_system_improvements.py  test_agents.py  test_agents_comprehensive.py  test_ai_content_generation.py  test_api_compatibility.py  test_api_prefix_production.py  test_api_routes_comprehensive.py  test_artist_skills_registration.py  test_auth.py  test_auto_save.py  test_campaign_endpoint.py  test_campaign_endpoint_comprehensive.py  test_campaign_templates_route_fix.py  test_character_creation_abilities.py  test_character_progression.py  test_class_features.py  test_combat_cartographer_skills_registration.py  test_combat_edge_cases.py  test_combat_turn_order.py  test_concentration_endpoint.py  test_concentration_integration.py  test_conditions.py  test_config_dependency_injection.py  test_conversation_history.py  test_dice_narrative_integration.py  test_encounter_balancer.py  test_end_to_end.py  test_equipment.py  test_equipment_endpoint.py  test_equipment_integration.py  test_frontend_backend_integration.py  test_game_engine_wiring.py  (+42 more)
docs/: AGENTS.md  AI_SECURITY_ANALYSIS.md  AZURE_OPENAI_REQUIREMENTS.md  BUILD.md  README.md  TESTING_STRATEGY.md  adr_validation_report.md  agent_system_prompts.md  agents.md  (+28 more)
(+351 files in other folders)
