[project]
name = "str-agentic-adventures"
description = "AI Dungeon Master - An agentic AI-powered tabletop RPG experience"
version = "0.1.0"
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SecuringTheRealm", email = "contact@securingtherealm.com"}
]
keywords = ["ai", "rpg", "dungeons-and-dragons", "semantic-kernel", "azure-openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
]

# Core dependencies
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Azure & OpenAI integration
    "semantic-kernel>=1.0,<2.0",
    "azure-identity>=1.13.0",
    "openai>=1.0,<2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.6",
    # Utilities
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.5",
    "tenacity>=8.2.2",
    "pyyaml>=6.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-factoryboy>=2.6.0",
    "httpx>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/SecuringTheRealm/str-agentic-adventures"
Repository = "https://github.com/SecuringTheRealm/str-agentic-adventures"
Issues = "https://github.com/SecuringTheRealm/str-agentic-adventures/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[dependency-groups]
dev = [
    "ruff>=0.1.5",
    "pytest>=7.4.0", 
    "pytest-asyncio>=0.21.0",
    "pytest-factoryboy>=2.6.0",
    "httpx>=0.24.1",
]

[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = [
    "migrations",
    "alembic",
    "__pycache__",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "ANN", "S", "A", "C4", "T10", "RET", "SIM", "ERA"]
ignore = []  # Removed deprecated ANN101/ANN102 rules, removed COM to avoid formatter conflicts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]  # Ignore import-related warnings in __init__ files
"tests/*" = ["S101"]  # Allow assert in tests
"backend/tests/*" = ["S101"]  # Allow assert in tests

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]