[project]
name = "str-agentic-adventures-backend"
description = "AI Dungeon Master - Backend API and Agents"
version = "0.1.0"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "SecuringTheRealm", email = "contact@securingtherealm.com"}
]

# Core dependencies
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    # Azure & OpenAI integration
    "semantic-kernel>=1.0,<2.0",
    "azure-identity>=1.13.0",
    "azure-storage-blob>=12.16.0",
    "openai>=1.0,<2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "psycopg2-binary>=2.9.6",
    # Utilities
    "python-multipart>=0.0.6",
    "aiohttp>=3.8.5",
    "tenacity>=8.2.2",
    "pyyaml>=6.0",
]

# Development dependencies
[project.optional-dependencies]
dev = [
    "ruff>=0.1.5",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-factoryboy>=2.6.0",
    "httpx>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.5",
    "pytest>=7.4.0", 
    "pytest-asyncio>=0.21.0",
    "pytest-factoryboy>=2.6.0",
    "httpx>=0.24.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--strict-config",
    "--durations=10",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests as async tests",
]
